package maidsafe.vault.protobuf;
option optimize_for = LITE_RUNTIME;

message DiskStoredElement {
  required bytes data_name = 1;
  required bytes serialised_value = 2;
  required int32 data_type = 3;
}

message DiskStoredFile {
  repeated DiskStoredElement disk_element = 1;
}
