package maidsafe.vault.protobuf;
option optimize_for = LITE_RUNTIME;

message MetadataElement {
  required bytes data_name = 1;
  required int32 element_size = 2;
  required int64 number_stored = 3;
  repeated bytes online_pmid_name = 4;
  repeated bytes offline_pmid_name = 5;
}

message Metadata {
  repeated MetadataElement elements = 1;
}
